# rollup-boost

./: '  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  RELEASE.md  book.toml  build.rs  deny.toml  playground.yaml  scenario.toml  vercel.json
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug.md  docs.md  feature.md
.github/workflows/: book-tests.yml  book.yml  build.yml  builder-playground.yml  ci.yaml  common-build-docker-image.yml  common-lint.yml  common-tests.yml  docs-checks.yml  integration.yml  kurtosis_integration.yml  lint.yml  rb-builder-playground-integration-tests.yml  rb-kurtosis-integration-tests.yml  rb-release.yml  release-finish.yml  release.yml  test.yml  websocket-proxy-ci.yaml  websocket-proxy-release.yml  wp-checks.yml  wp-release.yml
.vercel/: build.sh
book/: README.md  book.toml
book/src/: SUMMARY.md  intro.md
book/src/architecture/: README.md  external-building.md  overview.md  sidecar.md
book/src/block-building/: basics.md
book/src/cli/: README.md  flashblocks-rpc.md  rollup-boost.md  websocket-proxy.md
book/src/contributors/: README.md
book/src/developers/: README.md  flashblocks-rpc.md
book/src/flashblocks/: introduction.md
book/src/modules/: README.md  flashblocks.md  flashtestations.md
book/src/operators/: README.md  ha-setup.md  local.md  production.md
book/theme/: head.hbs
crates/flashblocks/: Cargo.toml
crates/flashblocks-node/: Cargo.toml
crates/flashblocks-node/src/: lib.rs  main.rs
crates/flashblocks-node/tests/: p2p.rs
crates/flashblocks-p2p/: Cargo.toml
crates/flashblocks-p2p/src/: lib.rs  lib.rs.bak
crates/flashblocks-p2p/src/connection/: handler.rs  mod.rs
crates/flashblocks-p2p/src/net/: mod.rs
crates/flashblocks-p2p/src/protocol/: auth.rs  connection.rs  error.rs  event.rs  handler.rs  mod.rs  proto.rs
crates/flashblocks-p2p/tests/: protocol.rs
crates/flashblocks-rpc/: Cargo.toml  README.md
crates/flashblocks-rpc/src/: cache.rs  flashblocks.rs  lib.rs  metrics.rs  overlay.rs  rpc.rs
crates/flashblocks-rpc/src/tests/: mod.rs
crates/flashblocks/src/: outbound.rs
crates/rollup-boost/: Cargo.toml  build.rs
crates/rollup-boost-core/: Cargo.toml
crates/rollup-boost-core/src/: lib.rs
crates/rollup-boost-types/: Cargo.toml
crates/rollup-boost-types/src/: authorization.rs  flashblocks.rs  lib.rs  payload.rs
crates/rollup-boost/src/: cli.rs  consistent_request.rs  debug_api.rs  engine_api.rs  health.rs  lib.rs  lib_api.rs  metrics.rs  payload.rs  probe.rs  proxy.rs  selection.rs  server.rs  tracing.rs  version.rs
crates/rollup-boost/src/client/: auth.rs  error.rs  http.rs  mod.rs  proxy_rpc.rs  rpc.rs
crates/rollup-boost/src/flashblocks/: args.rs  authorization.rs  error.rs  inbound.rs  launcher.rs  manager.rs  metrics.rs  mod.rs  outbound.rs  p2p.rs  primitives.rs  provider.rs  pubsub.rs  service.rs
crates/rollup-boost/src/integration_tests/: builder_full_delay.rs  builder_returns_incorrect_block.rs  execution_mode.rs  mod.rs  remote_builder_down.rs  simple.rs  simple_isthmus_transition.rs
crates/rollup-boost/src/tests/: builder_full_delay.rs  builder_returns_incorrect_block.rs  consensus_integration.rs  execution_mode.rs  fcu_no_block_time_delay.rs  flashblocks.rs  l2_state_root_computation.rs  library_api.rs  mod.rs  no_tx_pool.rs  remote_builder_down.rs  simple.rs  simple_isthmus.rs  simple_isthmus_transition.rs  unhealthy_builder_traffic.rs
crates/rollup-boost/src/tests/common/: mod.rs  proxy.rs
crates/rollup-boost/src/tests/common/services/: mod.rs  op_rbuilder.rs  op_reth.rs  rollup_boost.rs
crates/websocket-proxy/: Cargo.toml  Dockerfile  README.md
crates/websocket-proxy/src/: auth.rs  client.rs  filter.rs  flashblock_parser.rs  integration.rs  leader_tracker.rs  lib.rs  main.rs  metrics.rs  rate_limit.rs  registry.rs  server.rs  subscriber.rs
crates/websocket-proxy/tests/: integration.rs
docs/: design-philosophy-testing-strategy.md  flashblocks-ha.md  flashblocks.md  load-testing-acceptance-criteria-template.md  local-devnet.md  reorgs.md  rollup-boost-ha.md  running-rollup-boost.md
ops/: docker-compose.yaml  l2-op-geth-entrypoint.sh  l2-op-geth.Dockerfile
proto/: service.proto
scripts/: download-op-reth.sh
scripts/ci/: builder-playground.sh  kurtosis-params.yaml  kurtosis.sh  stress.sh
specs/: flashblocks-p2p.md  flashblocks.md  flashblocks_p2p.md  flashtestations.md
src/: auth_layer.rs  cli.rs  client.rs  consistent_request.rs  debug_api.rs  engine.rs  engine_api.rs  error.rs  health.rs  integration.rs  lib.rs  main.rs  metrics.rs  payload.rs  probe.rs  proxy.rs  rate_limit.rs  registry.rs  rpc.rs  rpc_client.rs  selection.rs  selector.rs  server.rs  subscriber.rs  tracing.rs
src/client/: auth.rs  http.rs  mod.rs  rpc.rs
src/flashblocks/: client.rs  inbound.rs  mod.rs  outbound.rs  primitives.rs  service.rs
src/integration/: integration_test.rs  mod.rs  proxy.rs  service_rb.rs  service_reth.rs
src/integration/containers/: op_reth.rs  rollup_boost.rs
src/integration/testdata/: genesis.json
src/integration/tests/: test_integration_no_tx_pool.rs
tests/: api.rs  builder_full_delay.rs  builder_returns_incorrect_block.rs  common.rs  engine_calls_in_order.rs  execution_mode.rs  fcu_avalanche_with_delay.rs  fcu_no_block_time_delay.rs  fcu_precedes_get_payload.rs  isthmus_fork.rs  miner_set_max_da_size.rs  no_tx_pool.rs  remote_builder_down.rs  simple.rs  simple_isthmus.rs
tests/common/: mod.rs  proxy.rs  proxy_delay.rs
tests/common/services/: mod.rs  op_reth.rs  rollup_boost.rs
tests/common/test_data/: genesis.json  p2p_secret.hex
tests/integration/: integration_test.rs  mod.rs  proxy.rs
tests/integration/containers/: op_reth.rs  rollup_boost.rs
tests/integration/testdata/: genesis.json
websocket-proxy/: .gitignore  Cargo.toml
websocket-proxy/.github/workflows/: ci.yaml
websocket-proxy/src/: client.rs  registry.rs
