[workspace]
resolver = "3"

members = [
    "crates/rollup-boost",
    "crates/websocket-proxy",
    "crates/flashblocks-rpc",
]

[workspace.dependencies]
rollup-boost = { path = "crates/rollup-boost" }

tracing = "0.1.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3.31"
thiserror = "2.0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
metrics = "0.24.0"
metrics-derive = "0.1"
tokio = { version = "1", features = ["full"] }
eyre = "0.6.12"
url = "2.2.0"
sha2 = { version = "0.10", default-features = false }
backoff = "0.4.0"

# Reth deps
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.2" }

# Alloy libraries
alloy-rpc-types-engine = "1.0.41"
alloy-rpc-types-eth = "1.0.41"
alloy-primitives = { version = "1.4.1", features = ["rand"] }
alloy-serde = "1.0.41"
alloy-eips = "1.0.41"
alloy-json-rpc = "1.0.41"
alloy-consensus = "1.0.41"
alloy-rpc-types = "1.0.41"
alloy-genesis = "1.0.41"
alloy-rpc-client = "1.0.41"
alloy-provider = "1.0.41"
op-alloy-network = "0.22.0"
op-alloy-rpc-types-engine = "0.22.0"
op-alloy-consensus = "0.22.0"
op-alloy-rpc-types = "0.22.0"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["redis"] }

[patch."https://github.com/paradigmxyz/reth"]
reth-optimism-payload-builder = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-db = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-node-api = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-node-builder = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-node-core = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-chainspec = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-cli = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-evm = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-forks = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-node = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-primitives = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-optimism-rpc = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-primitives = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-primitives-traits = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-provider = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-rpc-eth-api = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-rpc-server-types = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-rpc-layer = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-tasks = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-tracing = { git = "https://github.com/okx/reth", tag = "v0.1.1" }
reth-e2e-test-utils = { git = "https://github.com/okx/reth", tag = "v0.1.1" }

[patch.crates-io]
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-rpc-types-beacon = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "35bc323cc23911e52cb1ec8f6a58ebb5d5869b27" }
