[workspace]
resolver = "3"

members = [
    "crates/rollup-boost",
    "crates/websocket-proxy",
    "crates/rollup-boost-types",
]

[workspace.dependencies]
rollup-boost = { path = "crates/rollup-boost" }
flashblocks-rpc = { path = "crates/flashblocks-rpc" }
rollup-boost-types = { path = "crates/rollup-boost-types" }

backoff = "0.4.0"
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6.12"
futures = "0.3.31"
metrics = "0.24.0"
metrics-derive = "0.1"
moka = { version = "0.12.10", features = ["future"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.96"
sha2 = { version = "0.10", default-features = false }
thiserror = "2.0.11"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.4"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
url = "2.2.0"
ed25519-dalek = { version = "2", features = ["serde"] }
blake3 = "1"
hex = "0.4"

# Alloy libraries
alloy-rpc-types-engine = "1.4.3"
alloy-rpc-types-eth = "1.4.3"
alloy-primitives = { version = "1.5.0", features = ["rand"] }
alloy-serde = "1.4.3"
alloy-eips = "1.4.3"
alloy-json-rpc = "1.4.3"
alloy-consensus = "1.4.3"
alloy-rpc-types = "1.4.3"
alloy-genesis = "1.4.3"
alloy-rpc-client = "1.4.3"
alloy-rlp = "0.3.12"
alloy-provider = "1.4.3"
op-alloy-network = "0.23.1"
op-alloy-rpc-types-engine = "0.23.1"
op-alloy-consensus = "0.23.1"
op-alloy-rpc-types = "0.23.1"
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
testcontainers = "0.23"
jsonrpsee = "0.26.0"
testcontainers-modules = { version = "0.11", features = ["redis"] }
redis-test = "1"