[package]
name = "flashblocks-node"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rollup-boost.workspace = true
flashblocks-p2p.workspace = true
flashblocks-rpc.workspace = true

reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc", features = [
    "test-utils",
] }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-db = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", rev = "6daf5fc" }

reth-ethereum = { workspace = true, features = ["node", "network", "cli"] }
reth-eth-wire = { workspace = true }
reth-network = { workspace = true }
reth-network-peers = { workspace = true }
ed25519-dalek = { version = "2", features = ["serde"] }

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
tracing.workspace = true
clap.workspace = true
eyre.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
serde_json.workspace = true
serde.workspace = true

jsonrpsee = { version = "0.25.1" }
futures-util = "0.3.31"
brotli = "8.0.1"
