[package]
name = "flashblocks-p2p"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
reth.workspace = true
reth-ethereum = { workspace = true, features = ["node", "network", "cli"] }
reth-eth-wire = { workspace = true }
reth-network = { workspace = true }
reth-node-api = { workspace = true }
reth-node-builder = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }

ed25519-dalek = { version = "2", features = ["serde"] }
blake3 = "1"                                            # fast hashing for payload IDs
serde = { version = "1", features = ["derive"] }

tokio = { workspace = true }
tokio-stream = { workspace = true }
eyre.workspace = true
futures = { workspace = true }
clap.workspace = true
tracing.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
serde_json = "1.0"
thiserror = "2"
parking_lot = "0.12"


rollup-boost = { path = "../rollup-boost" }
