[package]
name = "flashblocks-rpc"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
rollup-boost.workspace = true

reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3", features = [
    "test-utils",
] }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.3" }

alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-json-rpc.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-rpc-client.workspace = true
alloy-provider.workspace = true
op-alloy-network.workspace = true
op-alloy-consensus.workspace = true
op-alloy-rpc-types.workspace = true

tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
tracing.workspace = true
clap.workspace = true
eyre.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
serde_json.workspace = true
serde.workspace = true

jsonrpsee = { version = "0.26.0" }
futures-util = "0.3.31"
brotli = "8.0.1"
arc-swap = "1.7.1"

[[bin]]
name = "flashblocks-rpc"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"
