[package]
name = "rollup-boost-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
alloy-primitives = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
