[package]
name = "rollup-boost"
version = "0.7.12"
edition = "2024"
description = "Rollup Boost is a sidecar for optimism rollups that enables rollup extensions"
rust-version = "1.85"
license = "MIT"
readme = "../../README.md"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
metrics.workspace = true
tokio.workspace = true
eyre.workspace = true
url.workspace = true
sha2.workspace = true
moka = { workspace = true, features = ["future"] }

op-alloy-rpc-types-engine.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rpc-types-eth.workspace = true
alloy-primitives.workspace = true
alloy-serde.workspace = true

tokio-tungstenite.workspace = true
metrics-derive.workspace = true

jsonrpsee = { workspace = true, features = ["server", "http-client", "macros"] }
http = "1.1.0"
dotenvy = "0.15.7"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.4", features = [
    "decompression-full",
    "sensitive-headers",
] }
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
hyper-rustls = { version = "0.27.0", features = ["ring"] }
rustls = { version = "0.23.23", features = ["ring"] }
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.28.0", features = [
    "http-proto",
    "http-json",
    "reqwest-client",
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
tracing-opentelemetry = "0.29.0"
metrics-exporter-prometheus = "0.16.0"
metrics-util = "0.19.0"
paste = "1.0.15"
parking_lot = "0.12.3"
tokio-util = { version = "0.7.13" }
dashmap = "6.1.0"
backoff.workspace = true
uuid = { version = "1.17.0", features = ["v4", "v7"] }
bytes = "1.10.1"
lru = "0.16"

[dev-dependencies]
serial_test = "3"
rand = "0.9.0"
time = { version = "0.3.36", features = ["macros", "formatting", "parsing"] }
op-alloy-consensus.workspace = true
alloy-eips = { version = "1.0.41", features = ["serde"] }
alloy-consensus = { workspace = true, features = ["serde"] }
anyhow = "1.0"
assert_cmd = "2.0.10"
predicates = "3.1.2"
tokio-util = { version = "0.7.13" }
bytes = "1.2"
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.4.7" }
ctor = "0.4.1"
reqwest = "0.12.15"
testcontainers.workspace = true

[build-dependencies]
vergen = { version = "9.0.4", features = ["build", "cargo", "emit_and_set"] }
vergen-git2 = "1.0.5"

[[bin]]
name = "rollup-boost"
path = "src/bin/main.rs"

[lib]
path = "src/lib.rs"
